# plasma-workspace

./: .gitignore  CMakeLists.txt  build.sh
applets/: CMakeLists.txt
applets/clipboard/: CMakeLists.txt
applets/clipboard/plugin/: CMakeLists.txt  clipboardplugin.cpp  clipboardplugin.h  qmldir
applets/clipboard/plugin/draghelper/: draghelper.cpp  draghelper.h
components/containmentlayoutmanager/: appletslayout.cpp
components/sessionsprivate/: sessionsmodel.h
kcms/lookandfeel/: kcm.cpp  lookandfeelmanager.cpp
kcms/nightcolor/: CMakeLists.txt  kcm.cpp  kcm.h
krunner/: CMakeLists.txt  main.cpp  view.cpp
libkworkspace/: kdisplaymanager.h
libtaskmanager/autotests/: tasktoolstest.cpp
login-sessions/: install-sessions.sh.cmake
po/af/: kcm5_icons.po  kcm_colors.po  kcm_cursortheme.po  kcm_fonts.po  kcm_icons.po  kcm_style.po  kcmformats.po  kfontinst.po  kio5_applications.po  klipper.po  krdb.po  ksmserver.po
po/ar/: freespacenotifier.po  kcm5_icons.po  kcm_autostart.po  kcm_colors.po  kcm_cursortheme.po  kcm_desktoptheme.po  kcm_feedback.po  kcm_fonts.po  kcm_icons.po  kcm_lookandfeel.po  (+70 more)
rpm/: org.kde.plasma.startupsound.desktop  plasma-startupsound  plasma-workspace-5.3.2-no-lto-in-plasmashell.patch  plasma-workspace-5.8.0-use-openmandriva-icon-and-background.patch  plasma-workspace-5.9.0-startup-scripts.patch  plasma-workspace.rpmlintrc  plasma-workspace.spec
sddm-theme/: Main.qml
shell/: panelview.cpp  panelview.h  plasma-plasmashell.service.in  screenpool.cpp  screenpool.h  shellcorona.cpp  shellcorona.h
startkde/: startplasma-wayland.cpp
(+4944 files in other folders)
